--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "browserify": "^14.4.0",
     "del": "^3.0.0",
     "gh-pages": "^1.0.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-connect": "^5.0.0",
     "gulp-csso": "^3.0.0",
@@ -25,13 +25,14 @@
     "gulp-util": "^3.0.8",
     "normalizecss": "^3.0.0",
     "through": "^2.3.8",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "engines": {
     "node": ">=4.2.0"
   },
   "dependencies": {
-    "bespoke-forms": "^1.0.0"
+    "bespoke-forms": "^1.0.0",
+    "vinyl": "^2.2.0"
   }
 }
