--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "presentation-slide-template",
   "version": "1.0.0",
   "license": "UNLICENSED",
+  "browserslist" : [ "last 2 versions"],
   "devDependencies": {
     "bespoke": "^1.1.0",
     "bespoke-bullets": "^1.1.0",
@@ -15,14 +16,13 @@
     "del": "^3.0.0",
     "gh-pages": "^1.0.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^3.1.1",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-connect": "^5.0.0",
     "gulp-csso": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
     "normalizecss": "^3.0.0",
     "through": "^2.3.8",
     "vinyl-buffer": "^1.0.1",
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "bespoke-forms": "^1.0.0",
+    "fancy-log": "^1.3.3",
     "vinyl": "^2.2.0"
   }
 }
